not perfect but works

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-
+    <div>Play a rock papaer scissors game!</div>
+    <div>Your opponent is computer!</div>
+    <button id="btnOne">ROCK</button>
+    <button id="btnTwo">PAPER</button>
+    <button id="btnTree">SCISSORS</button>
+    <div class="scoreBoard"></div>
 
     <script src="script.js"></script>
 </body>
