--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <button id="btnTree">SCISSORS</button>
     <div class="scoreBoard"></div>
 
+    <div> nesto </div>
+
     <script src="script.js"></script>
 </body>
 </html>
